# az-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build-page.yml  test.yml
examples/: client.rs
src/: api.rs  arg.rs  azidentityext.rs  cmd.rs  lib.rs  log.rs  lsp.rs  wasm_exports.rs
src/api/: cli_expander.rs  invoke.rs  metadata.rs  metadata_command.rs  metadata_index.rs
src/azidentityext/: credential.rs  flow.rs  identity.rs  login.rs  oauth_http_client.rs  profile.rs
src/azidentityext/credential/: access_token_credential.rs  refreshable_credential.rs
src/azidentityext/flow/: auth_code.rs  refresh_token.rs
src/azidentityext/identity/: interactive_browser.rs
src/azidentityext/identity/interactive_browser/: loopback_server.rs
src/azidentityext/login/: interactive_browser.rs
src/lsp/: backend.rs  complete.rs  document.rs  hcl.rs  hcl_visitor.rs  hover.rs  semantic_tokens.rs
www/: vite.config.ts
www/scripts/: prepare-wasm.js
www/src/: App.css  App.tsx  vite-env.d.ts
www/src/components/: AuthComponents.tsx  AzureCLIInterface.tsx  TenantInput.tsx
www/src/config/: authConfig.ts
www/src/context/: AuthContext.tsx
www/src/hooks/: useAzureAuth.ts
www/src/utils/: wasmLoader.ts
