[package]
name = "azure-rs"
description = "Azure CLI written in Rust"
license = "MIT"
version = "0.1.0"
edition = "2024"
exclude = [
    "/target/*",
    "/www/*",
    "/examples/*",
    "/metadata/*",
    "/pkg/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
embed-api = [
    "dep:rust-embed",
]

[dependencies]
anyhow = "1.0.98"
azure_core = "0.27.0"
azure_identity = "0.27.0"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive", "cargo", "string"] }
serde = "1.0.219"
serde_json = "1.0.140"
async-trait = "0.1.89"

tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_family = "wasm")'.dependencies]
rust-embed = { version = "8.7.2", features = ["debug-embed"] }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50" }
console_error_panic_hook = { version = "0.1.7" }
tracing-web = { version = "0.1" }
getrandom = { version = "0.3", features = ["wasm_js"] }
typespec_client_core = { version = "0.7.0", features = ["wasm_bindgen"] }
uuid = { version = "1", features = ["v4", "js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.45.1" }
typespec_client_core = { version = "0.7.0", features = ["tokio"] }
uuid = { version = "1", features = ["v4"] }
rust-embed = { version = "8.7.2", features = ["debug-embed"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.45.1" }

[[bin]]
name = "azure"
path = "src/bin/azure.rs"

[[example]]
name = "client"
path = "examples/client.rs"
